--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lab 1</title>
 </head>
 <body>
     <h1>Вітаю!</h1>
+    <p>Це моя перша сторінка</p>
 </body>
 </html>
